--- a/style.css
+++ b/style.css
@@ -172,37 +172,48 @@ h2{
     font-size: var(--p-font);
 }
 .certifications {
-    text-align: center;
-    margin-top: 20px;
+  position: relative; 
+}
+.vertical-line {
+  width: 2px;
+  height: 100%;
+  background-color: #fff; 
+  position: absolute;
+  left: calc(20% - 1px); 
+  top: 0;
+  bottom: 0;
+}
+.certifications h3 {
+    position: absolute;
+    left: 200px;  
+    top: 4%;
+    transform: translateY(-50%);
+    margin: 0; 
+    padding: 0; 
+}
+.certifications .certification-images img {
+    position: absolute;
+    left: 200px;
+    top: calc(20% - 100px); 
+    width: 300px;
+    height: 200px;
+    margin: 10px;
+    cursor: pointer;
+    transition: transform 0.3s ease;
 }
 
-.certification-album {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            width: 80%;
-            margin: auto;
-        }
-        .certification-images {
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .cert-slide {
-            position: absolute;
-            width: 250px;
-            height: auto;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-            transition: transform 0.5s ease-in-out;
-        }
-        .cert-slide:nth-child(1) { transform: rotate(-10deg) translateX(-20px); }
-        .cert-slide:nth-child(2) { transform: rotate(-5deg) translateX(-10px); }
-        .cert-slide:nth-child(3) { transform: rotate(0deg); }
-        .cert-slide:nth-child(4) { transform: rotate(5deg) translateX(10px); }
 
+.certifications .certification-images img:first-child {
+    top: calc(60% - 250px); 
+}
+
+.certifications .certification-images img:last-child {
+    top: calc(50% + 50px); 
+}
+
+.certifications .certification-images img:hover {
+    transform: scale(1.1);
+}
 .skills-section
 {
     padding-top: 30px;
@@ -537,4 +548,5 @@ footer h4{
     color: #bbb;
     text-decoration: none;
     cursor: pointer;
+
 }
